--- a/surespot/src/main/res/layout/main_view.xml
+++ b/surespot/src/main/res/layout/main_view.xml
@@ -32,46 +32,98 @@
         android:layout_above="@+id/editTexts"
         android:layout_below="@+id/indicator"/>
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/fButtons"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_above="@+id/fEmoji"
+        android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/editTexts"
-        android:layout_alignWithParentIfMissing="true">
+
+        android:orientation="horizontal"
+        >
 
 
-        <!--<TextView-->
-            <!--android:id="@+id/tvGIF"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:gravity="center"-->
-            <!--android:padding="5dp"-->
-            <!--android:text="@string/gif"-->
-            <!--android:textSize="@dimen/abc_text_size_large_material"-->
-            <!--android:textStyle="bold"/>-->
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="horizontal">-->
+
 
         <ImageView
+
 
             android:id="@+id/bEmoji"
-            android:layout_width="match_parent"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:padding="5dp"
-            android:visibility="gone"/>
+
+            android:src="@drawable/smiley"
+            android:visibility="visible"/>
+
+        <TextView
+            android:id="@+id/tvGIF"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+
+            android:text="@string/gif"
+            android:textSize="@dimen/abc_text_size_large_material"
+            android:textStyle="bold"/>
+
 
         <ImageView
-            android:id="@+id/bQR"
-            android:layout_width="match_parent"
+
+            android:id="@+id/bCamera"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:padding="5dp"
-            android:src="@drawable/qr_surespot"/>
-    </FrameLayout>
+
+            android:src="@drawable/ic_menu_camera"
+            android:visibility="visible"/>
+
+        <ImageView
+
+            android:id="@+id/bGallery"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+
+            android:src="@drawable/ic_menu_gallery"
+            android:visibility="visible"/>
+
+
+        <ImageView
+
+            android:id="@+id/bPlus"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+
+            android:src="@drawable/ic_menu_add"
+            android:visibility="visible"/>
+
+
+        <!--</LinearLayout>-->
+
+        <!--<ImageView-->
+
+        <!--android:id="@+id/bEmoji"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:padding="5dp"-->
+        <!--android:visibility="gone"/>-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/bQR"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:padding="5dp"-->
+            <!--android:src="@drawable/qr_surespot"/>-->
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/editTexts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/fEmoji"
+
         android:layout_alignWithParentIfMissing="true"
         android:layout_toLeftOf="@+id/bSend"
         android:layout_toRightOf="@+id/fButtons">
@@ -141,6 +193,7 @@
         android:layout_alignWithParentIfMissing="true"
         android:layout_marginBottom="-10dp"
         android:layout_marginRight="-10dp"
+
         android:background="@drawable/send_button">
 
         <ImageView
