--- a/surespot/src/main/res/layout/main_view.xml
+++ b/surespot/src/main/res/layout/main_view.xml
@@ -44,7 +44,7 @@
         >
 
 
-    <!--<LinearLayout-->
+        <!--<LinearLayout-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent"-->
         <!--android:orientation="horizontal">-->
@@ -111,11 +111,11 @@
         <!--android:visibility="gone"/>-->
 
         <!--<ImageView-->
-            <!--android:id="@+id/bQR"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:padding="5dp"-->
-            <!--android:src="@drawable/qr_surespot"/>-->
+        <!--android:id="@+id/bQR"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:padding="5dp"-->
+        <!--android:src="@drawable/qr_surespot"/>-->
     </LinearLayout>
 
     <FrameLayout
@@ -228,6 +228,48 @@
             android:src="@drawable/ic_menu_send">
         </ImageView>
     </FrameLayout>
+
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                 android:id="@+id/gifFrame"
+                 android:layout_width="match_parent"
+                 android:layout_height="150dp"
+                 android:layout_above="@id/editTexts"
+                 android:layout_alignParentEnd="true"
+                 android:layout_alignParentLeft="true"
+                 android:layout_alignParentRight="true"
+                 android:layout_alignParentStart="true"
+                 android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/gif_progress_bar"
+            style="?android:progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvGifs"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:orientation="horizontal"
+
+            />
+
+        <TextView
+            android:id="@+id/tv_no_gifs"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/no_GIFS_found"
+            android:visibility="gone"
+            />
+
+
+    </FrameLayout>
+
 
     <!--<io.github.rockerhieu.emojicon.EmojiconsView-->
     <!--android:id="@+id/emojicons_view"-->
