--- a/surespot/src/main/res/layout/main_view.xml
+++ b/surespot/src/main/res/layout/main_view.xml
@@ -39,24 +39,19 @@
         android:layout_above="@+id/fEmoji"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/editTexts"
-
-        android:orientation="horizontal"
-        >
-
-
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:orientation="horizontal">-->
+        android:orientation="horizontal">
 
 
         <ImageView
+            android:id="@+id/bQR"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/qr_surespot"/>
 
-
+        <ImageView
             android:id="@+id/bEmoji"
             android:layout_width="40dp"
             android:layout_height="match_parent"
-
             android:src="@drawable/smiley"
             android:visibility="visible"/>
 
@@ -65,31 +60,21 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:gravity="center"
-
             android:text="@string/gif"
             android:textSize="@dimen/abc_text_size_large_material"
             android:textStyle="bold"/>
-
-
         <ImageView
-
             android:id="@+id/bCamera"
             android:layout_width="40dp"
             android:layout_height="match_parent"
-
             android:src="@drawable/ic_menu_camera"
             android:visibility="visible"/>
-
         <ImageView
-
             android:id="@+id/bGallery"
             android:layout_width="40dp"
             android:layout_height="match_parent"
-
             android:src="@drawable/ic_menu_gallery"
             android:visibility="visible"/>
-
-
         <ImageView
 
             android:id="@+id/bPlus"
@@ -99,23 +84,6 @@
             android:src="@drawable/ic_menu_add"
             android:visibility="visible"/>
 
-
-        <!--</LinearLayout>-->
-
-        <!--<ImageView-->
-
-        <!--android:id="@+id/bEmoji"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:padding="5dp"-->
-        <!--android:visibility="gone"/>-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/bQR"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:padding="5dp"-->
-        <!--android:src="@drawable/qr_surespot"/>-->
     </LinearLayout>
 
     <FrameLayout
@@ -123,7 +91,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/fEmoji"
-
         android:layout_alignWithParentIfMissing="true"
         android:layout_toLeftOf="@+id/bSend"
         android:layout_toRightOf="@+id/fButtons">
@@ -139,7 +106,6 @@
             android:maxLines="1"
             android:minHeight="45dp">
         </EditText>
-
 
         <com.rockerhieu.emojicon.EmojiconEditText
             android:id="@+id/etMessage"
@@ -269,14 +235,6 @@
 
 
     </FrameLayout>
-
-
-    <!--<io.github.rockerhieu.emojicon.EmojiconsView-->
-    <!--android:id="@+id/emojicons_view"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="200dp"-->
-    <!--android:visibility="gone"-->
-    <!--android:layout_alignParentBottom="true" />-->
 
     <RelativeLayout
         android:id="@+id/voiceHeader"
