--- a/surespot/src/main/res/layout/camera_view.xml
+++ b/surespot/src/main/res/layout/camera_view.xml
@@ -11,21 +11,28 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<FrameLayout android:id="@+id/container"
-             xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             xmlns:app="http://schemas.android.com/apk/res-auto">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+    >
 
-    <com.google.android.cameraview.CameraView
+    <io.fotoapparat.view.CameraView
         android:id="@+id/camera"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:adjustViewBounds="true"
-        app:autoFocus="true"
-        app:aspectRatio="4:3"
-        app:facing="back"
-        app:flash="auto"
-        android:keepScreenOn="true"/>
 
-</FrameLayout>
+        android:background="@android:color/black"
+        />
+
+    <ImageButton
+        android:id="@+id/take_picture"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/ic_camera"
+        />
+
+</RelativeLayout>
