--- a/surespot/src/main/res/drawable/send_button.xml
+++ b/surespot/src/main/res/drawable/send_button.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_pressed="true" android:color="@color/selectedMask"/>
-    <item android:color="@color/surespotGrey"/>
+    <item android:color="@android:color/white"/>
 </selector>
