--- a/surespot/src/main/res/layout/google_camera_view.xml
+++ b/surespot/src/main/res/layout/google_camera_view.xml
@@ -1,38 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-    Copyright (C) 2016 The Android Open Source Project
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-         http://www.apache.org/licenses/LICENSE-2.0
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
--->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <com.twofours.surespot.camera.AspectFrameLayout
-        android:id="@+id/afl"
+
+    <com.google.android.cameraview.CameraView
+        android:id="@+id/camera"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+
+        android:background="@android:color/black"
+        />
+
+    <RelativeLayout
+        android:id="@+id/left_zone"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        >
-
-        <com.google.android.cameraview.CameraView
-            android:id="@+id/camera"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:adjustViewBounds="true"
-            android:background="@android:color/black"
-            />
+        android:layout_toLeftOf="@id/camera"
+        android:layout_alignParentLeft="true"
+        android:background="@android:color/black"/>
 
 
-    </com.twofours.surespot.camera.AspectFrameLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@id/camera"
+        android:background="@android:color/black">
+
+        <ImageButton
+            android:id="@+id/launchCamera"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="11dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/elipsis"/>
+    </RelativeLayout>
+
+
     <ImageButton
         android:id="@+id/take_picture"
         android:layout_width="30dp"
