--- a/surespot/src/main/res/layout/google_camera_view.xml
+++ b/surespot/src/main/res/layout/google_camera_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -18,8 +19,8 @@
         android:id="@+id/left_zone"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_toLeftOf="@id/camera"
         android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@id/camera"
         android:background="@android:color/black"/>
 
 
@@ -30,7 +31,7 @@
         android:layout_toRightOf="@id/camera"
         android:background="@android:color/black">
 
-        <ImageButton
+        <com.twofours.surespot.ui.TintableImageView
             android:id="@+id/launchCamera"
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -38,19 +39,20 @@
             android:layout_alignParentRight="true"
             android:layout_marginBottom="11dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/elipsis"/>
+            android:background="@drawable/elipsis"
+            app:tint="@drawable/send_button"/>
     </RelativeLayout>
 
 
-    <ImageButton
+    <com.twofours.surespot.ui.TintableImageView
         android:id="@+id/take_picture"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-
         android:background="@drawable/ic_camera"
+        app:tint="@drawable/send_button"
         />
 
 </RelativeLayout>
