--- a/surespot/src/main/res/layout/gallery_message_mode_view.xml
+++ b/surespot/src/main/res/layout/gallery_message_mode_view.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              >
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <ProgressBar
         android:id="@+id/gallery_progress_bar"
@@ -29,4 +30,16 @@
         android:text="@string/no_GIFS_found"
         android:visibility="gone"
         />
+
+    <com.twofours.surespot.ui.TintableImageView
+        android:id="@+id/launch_gallery"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:clickable="true"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="11dp"
+        android:layout_marginRight="20dp"
+        android:background="@android:color/black"
+        android:src="@drawable/elipsis"
+        app:tint="@drawable/send_button"/>
 </FrameLayout>
