--- a/surespot/src/main/res/menu/activity_main.xml
+++ b/surespot/src/main/res/menu/activity_main.xml
@@ -1,24 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/item_overflow"
-        android:icon="@drawable/ic_menu_overflow"
-        android:orderInCategory="100"
-        android:showAsAction="always"
-        android:title="@string/options">
-        <menu>
-            <item
-                android:id="@+id/menu_send_file_bar"
-                android:icon="@android:drawable/ic_menu_send"
-                android:title="@string/send_file"/>
-            <item
-                android:id="@+id/menu_send_image_bar"
-                android:icon="@drawable/ic_menu_gallery"
-                android:title="@string/select_image"/>
-            <item
-                android:id="@+id/menu_capture_image_bar"
-                android:icon="@drawable/ic_menu_camera"
-                android:title="@string/capture_image"/>
+    <!--<item-->
+        <!--android:id="@+id/item_overflow"-->
+        <!--android:icon="@drawable/ic_menu_overflow"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title="@string/options">-->
+        <!--<menu>-->
+            <!--<item-->
+                <!--android:id="@+id/menu_send_file_bar"-->
+                <!--android:icon="@android:drawable/ic_menu_send"-->
+                <!--android:title="@string/send_file"/>-->
+            <!--<item-->
+                <!--android:id="@+id/menu_send_image_bar"-->
+                <!--android:icon="@drawable/ic_menu_gallery"-->
+                <!--android:title="@string/select_image"/>-->
+            <!--<item-->
+                <!--android:id="@+id/menu_capture_image_bar"-->
+                <!--android:icon="@drawable/ic_menu_camera"-->
+                <!--android:title="@string/capture_image"/>-->
 
             <!--<item-->
                 <!--android:id="@+id/menu_mute_bar"-->
@@ -56,7 +55,7 @@
                 android:id="@+id/menu_logout_bar"
                 android:icon="@drawable/ic_lock_power_off"
                 android:title="@string/logout"/>
-        </menu>
-    </item>
+    <!--</menu>-->
+    <!--</item>-->
 
 </menu>
