--- a/surespot/src/main/res/menu/activity_main.xml
+++ b/surespot/src/main/res/menu/activity_main.xml
@@ -1,11 +1,13 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--<item-->
-        <!--android:id="@+id/item_overflow"-->
-        <!--android:icon="@drawable/ic_menu_overflow"-->
-        <!--android:orderInCategory="100"-->
-        <!--android:title="@string/options">-->
-        <!--<menu>-->
+    <item
+        android:id="@+id/item_overflow"
+        android:icon="@drawable/ic_menu_overflow"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/options">
+        <menu>
             <!--<item-->
                 <!--android:id="@+id/menu_send_file_bar"-->
                 <!--android:icon="@android:drawable/ic_menu_send"-->
@@ -55,7 +57,7 @@
                 android:id="@+id/menu_logout_bar"
                 android:icon="@drawable/ic_lock_power_off"
                 android:title="@string/logout"/>
-    <!--</menu>-->
-    <!--</item>-->
+        </menu>
+    </item>
 
 </menu>
