Fix powered by giphy

--- a/surespot/src/main/res/layout/main_view.xml
+++ b/surespot/src/main/res/layout/main_view.xml
@@ -170,7 +170,8 @@
 
             <EditText
                 android:id="@+id/etGiphy"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="100"
                 android:layout_height="wrap_content"
 
                 android:imeOptions="actionSearch|flagNoExtractUi"
