--- a/surespot/src/main/res/values/styles.xml
+++ b/surespot/src/main/res/values/styles.xml
@@ -33,6 +33,6 @@
     </declare-styleable>
 
     <declare-styleable name="TintableImageView">
-        <attr name="tint" format="reference|color" />
+        <attr name="surespot_tint" format="reference|color" />
     </declare-styleable>
 </resources>
