--- a/surespot/src/main/res/values/styles.xml
+++ b/surespot/src/main/res/values/styles.xml
@@ -1,11 +1,18 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <declare-styleable name="VolumeEnvelopeView">
+        <attr name="color" format="color"/>
+    </declare-styleable>
 
+    <declare-styleable name="TintableImageView">
+        <attr name="surespot_tint" format="reference|color" />
+    </declare-styleable>
 
     <style name="DefaultTheme" parent="android:style/Theme.Holo.Light.DarkActionBar">
         <item name="android:buttonStyle">?android:attr/borderlessButtonStyle</item>
         <item name="android:actionBarStyle">
             @android:style/Widget.Holo.Light.ActionBar.Solid.Inverse
         </item>
+        <item name="surespot_tint">@drawable/button_selector_light</item>
     </style>
 
     <style name="TranslucentDefault" parent="@style/DefaultTheme">
@@ -18,6 +25,7 @@
     <style name="BlackTheme" parent="@android:style/Theme.Holo">
         <item name="android:buttonStyle">?android:attr/borderlessButtonStyle</item>
         <item name="android:actionBarStyle">@android:style/Widget.Holo.ActionBar.Solid</item>
+        <item name="surespot_tint">@drawable/button_selector_dark</item>
     </style>
 
 
@@ -28,11 +36,5 @@
         <item name="android:buttonStyle">@android:style/Widget.Holo.ActionButton</item>
     </style>
 
-    <declare-styleable name="VolumeEnvelopeView">
-        <attr name="color" format="color"/>
-    </declare-styleable>
 
-    <declare-styleable name="TintableImageView">
-        <attr name="surespot_tint" format="reference|color" />
-    </declare-styleable>
 </resources>
