--- a/surespot/src/main/res/xml/preferences.xml
+++ b/surespot/src/main/res/xml/preferences.xml
@@ -75,21 +75,23 @@
                 />
         </PreferenceScreen>
 
-        <CheckBoxPreference
-            android:defaultValue="true"
-            android:key="pref_enter_to_send"
-            android:summary="@string/pref_summary_enter_to_send"
-            android:title="@string/pref_title_enter_to_send"/>
 
-
+        <ListPreference
+            android:key="pref_giphy_search_language"
+            android:defaultValue="en"
+            android:title="@string/pref_giphy_search_language_title"
+            android:entries="@array/pref_giphy_language_entries"
+            android:entryValues="@array/pref_giphy_language_values"/>
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_download_gifs"
             android:summary="@string/pref_summary_download_gifs"
             android:title="@string/pref_title_download_gifs"/>
-
-
-
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="pref_enter_to_send"
+            android:summary="@string/pref_summary_enter_to_send"
+            android:title="@string/pref_title_enter_to_send"/>
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_disable_voice"
