--- a/surespot/src/main/res/layout/main_view.xml
+++ b/surespot/src/main/res/layout/main_view.xml
@@ -207,8 +207,10 @@
             android:id="@+id/ivInvite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_menu_invite">
+            android:src="@drawable/add_friend">
         </com.twofours.surespot.ui.TintableImageView>
 
         <com.twofours.surespot.ui.TintableImageView
