--- a/surespot/src/main/res/values/tags.xml
+++ b/surespot/src/main/res/values/tags.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="tagMessage" type="id">0</item>
-    <item name="tagDownloader" type="id">1</item>
-    <item name="tagGifDownloader" type="id">2</item>
-    <item name="tagGalleryDownloader" type="id">3</item>
+    <item name="tagMessage" type="id"></item>
+    <item name="tagDownloader" type="id"></item>
+    <item name="tagGifDownloader" type="id"></item>
+    <item name="tagGalleryDownloader" type="id"></item>
 </resources>
