Fix menu text color for dark theme. RM#1023

--- a/surespot/src/main/res/values/styles.xml
+++ b/surespot/src/main/res/values/styles.xml
@@ -22,19 +22,18 @@
         <item name="android:buttonStyle">@android:style/Widget.Holo.ActionButton</item>
     </style>
 
-    <style name="BlackTheme" parent="@android:style/Theme.Holo">
+    <style name="BlackThemeBase" parent="@android:style/Theme.Holo">
         <item name="android:buttonStyle">?android:attr/borderlessButtonStyle</item>
         <item name="android:actionBarStyle">@android:style/Widget.Holo.ActionBar.Solid</item>
         <item name="surespot_tint">@drawable/button_selector_dark</item>
+        <item name="android:actionMenuTextColor">@android:color/white</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
     </style>
 
-
-    <style name="TranslucentBlack" parent="@style/BlackTheme">
+    <style name="TranslucentBlack" parent="@style/BlackThemeBase">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:buttonStyle">@android:style/Widget.Holo.ActionButton</item>
     </style>
-
-
 </resources>
